[package]
name = "rust-keycloak"
version = "0.1.0"
authors = ["Q <q@magicalcodewit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
reqwest = { version = "0.10", features = ["json"] }
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
alcoholic_jwt = "1"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures01 = { version = "0.1", package = "futures" }
failure = "0.1"
uuid = { version = "<0.7", features = ["serde", "v4"] }
http = "0.1"
log = "0.4"
