[package]
name = "rust-keycloak"
version = "0.3.0"
authors = ["Q <q@magicalcodewit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
alcoholic_jwt = "4091"
futures = { version = "0.3", features = ["compat"] }
futures01 = { version = "0.1", package = "futures" }
failure = "0.1"
uuid = { version = "<0.7", features = ["serde", "v4"] }
http = "0.2"
log = "0.4"
futures-util = "0.3"
